--- a/Chatbot/index.html
+++ b/Chatbot/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <script src="https://unpkg.com/supersimpledev/chatbot.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>chatbot</title>
   </head>
